Proyecto SGP v1.1 -> Desarrollo

--- a/.htaccess
+++ b/.htaccess
@@ -12,13 +12,13 @@ RewriteRule ^personas/consulta sgp/vistas/consulta.php?template=personas
 RewriteRule ^personas/listado sgp/vistas/listado.php?template=personas
 RewriteRule ^evaluaciones/registro sgp/vistas/registro.php?template=evaluaciones
 RewriteRule ^evaluaciones/consulta sgp/vistas/consulta.php?template=evaluaciones
-RewriteRule ^capacitaciones/registro sgp/vistas/registro.php?template=cursos
-RewriteRule ^capacitaciones/consulta sgp/vistas/consulta.php?template=cursos
-RewriteRule ^capacitaciones/planificadas sgp/vistas/listado.php?template=cursosPlanificados
-RewriteRule ^capacitaciones/culminadas sgp/vistas/listado.php?template=cursosCulminados
-RewriteRule ^capacitaciones/planificar sgp/vistas/formProgramarCurso.php
+RewriteRule ^cursos/registro sgp/vistas/registro.php?template=cursos
+RewriteRule ^cursos/consulta sgp/vistas/consulta.php?template=cursos
+RewriteRule ^cursos/planificados sgp/vistas/listado.php?template=cursosPlanificados
+RewriteRule ^cursos/culminados sgp/vistas/listado.php?template=cursosCulminados
+RewriteRule ^cursos/planificar sgp/vistas/formProgramarCurso.php
 RewriteRule ^usuarios/registro sgp/vistas/registro.php?template=usuarios
 RewriteRule ^usuarios/listado sgp/vistas/listado.php?template=usuarios
 RewriteRule ^usuarios/resetPassword sgp/vistas/formCambioPass.php
 RewriteRule ^bitacora/$ sgp/vistas/listado.php?template=bitacora
-RewriteRule ^cargar/csv sgp/vistas/importarCsv.php
+RewriteRule ^cargar/archivo sgp/vistas/importarCsv.php
